# dm-colloquium

./: CMakeLists.txt  README.md
.github/workflows/: github-linter.yml
src/POZ_Z_D/: POZ_Z_D.cpp  POZ_Z_D.h
src/algebra/: algebra.h  integer.cpp  integer.h  natural.cpp  natural.h  polynomial.cpp  polynomial.h  rational.cpp  rational.h
src/integers/ABS_Z_N/: ABS_Z_N.cpp  ABS_Z_N.h
src/integers/ADD_ZZ_Z/: ADD_ZZ_Z.cpp  ADD_ZZ_Z.h
src/integers/DIV_ZZ_Z/: DIV_ZZ_Z.cpp  DIV_ZZ_Z.h
src/integers/MOD_ZZ_Z/: MOD_ZZ_Z.cpp  MOD_ZZ_Z.h
src/integers/MUL_ZM_Z/: MUL_ZM_Z.cpp
src/integers/MUL_ZZ_Z/: MUL_ZZ_Z.cpp  MUL_ZZ_Z.h
src/integers/POZ_Z_D/: POZ_Z_D.cpp  POZ_Z_D.h
src/operation/: Operation0Rational.cpp  Operation0Rational.h  operation.h  operation0.cpp  operation0.h  operation0Integer.cpp  operation0Integer.h  operation0Natural.cpp  operation0Natural.h  operation0Polynomial.cpp  operation0Polynomial.h  operation0Rational.cpp  operation1.cpp  operation1.h  operation1Integer.cpp  operation1Integer.h  operation1Natural.cpp  operation1Natural.h  operation1Polynomial.cpp  operation1Polynomial.h  operation1Rational.cpp  operation1Rational.h  operation2.cpp  operation2.h  operation2Integer.cpp  operation2Integer.h  operation2Natural.cpp  operation2Natural.h  operation2Polynomial.cpp  operation2Polynomial.h  operation2Rational.cpp  operation2Rational.h  operation3.cpp  operation3.h  operation3Integer.cpp  operation3Integer.h  operation3Natural.cpp  operation3Natural.h  operation3Polynomial.cpp  operation3Polynomial.h  (+2 more)
src/polynomial/: MUL_Pxk_P.cpp
(+66 files in other folders)
